feat: comprehensive framework cleanup and local execution optimization